Pagina about me iniciada
Pagina mostrandose correctamente
Mostrados elementos principales

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/styles_body.css">
         <link rel="stylesheet" href="css/styles_general.css">
         <link rel="stylesheet" href="css/styles_home.css">
+        <link rel="stylesheet" href="css/styles_aboutme_desktop.css">
+        <link rel="stylesheet" href="css/styles_aboutme_mobile.css">
     </head>
 
     <body class="">
