--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/styles_home.css">
         <link rel="stylesheet" href="css/styles_aboutme_desktop.css">
         <link rel="stylesheet" href="css/styles_aboutme_mobile.css">
+        <link rel="stylesheet" href="css/styles_aboutme_general.css">
     </head>
 
     <body class="">
