Avances v2 en AboutMe Mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/styles_aboutme_general.css">
     </head>
 
-    <body class="">
+    <body>
         <div id="loadingDiv">
             <img src="res/img/logo.png">
             <div class="w-2/3 bg-gray-800 rounded-full h-4 overflow-hidden">
