--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="css/styles_aboutme_desktop.css">
         <link rel="stylesheet" href="css/styles_aboutme_mobile.css">
         <link rel="stylesheet" href="css/styles_aboutme_general.css">
+        <link rel="stylesheet" href="css/styles_blog_desktop.css">
+        <link rel="stylesheet" href="css/styles_blog_general.css">
     </head>
 
     <body>
