Seccion blog avances v4

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/styles_aboutme_general.css">
         <link rel="stylesheet" href="css/styles_blog_desktop.css">
         <link rel="stylesheet" href="css/styles_blog_general.css">
+        <link rel="stylesheet" href="css/styles_blog_mobile.css">
     </head>
 
     <body>
