--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="es">
     <head>
         <title>psh98code</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="css/styles_header.css">
         <link rel="stylesheet" href="css/styles_loadingPage.css">
