--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 const app = new App();
                 app.init();
             });
-              alert("Ancho detectado: " + window.innerWidth);
+              window.alert("Ancho detectado: " + window.innerWidth);
 
         </script>
     </body>
