--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
             document.addEventListener("DOMContentLoaded", () => {
                 const app = new App();
                 app.init();
-                            window.alert("Ancho detectado: " + window.innerWidth);
-
             });
+
+        </script>
+        <script>
+            alert("Ancho detectado: " + window.innerWidth);
 
         </script>
     </body>
