--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>psh98code</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="MobileOptimized" content="width">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="css/styles_header.css">
         <link rel="stylesheet" href="css/styles_loadingPage.css">
