Varios changes mobile v2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta name="HandheldFriendly" content="true">
         <meta name="MobileOptimized" content="width">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0">
+        <link rel="stylesheet" href="css/styles.css?v=123">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="css/styles_header.css">
         <link rel="stylesheet" href="css/styles_loadingPage.css">
