--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <link rel="stylesheet" href="css/styles_blog_desktop.css">
         <link rel="stylesheet" href="css/styles_blog_general.css">
         <link rel="stylesheet" href="css/styles_blog_mobile.css">
+        <link rel="stylesheet" href="css/styles_contact_Desktop.css">
+        <link rel="stylesheet" href="css/styles_contact_Mobile.css">
+        <link rel="stylesheet" href="css/styles_contact_General.css">
     </head>
 
     <body>
