Proyects page init

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <link rel="stylesheet" href="css/styles_contact_Desktop.css">
         <link rel="stylesheet" href="css/styles_contact_Mobile.css">
         <link rel="stylesheet" href="css/styles_contact_General.css">
+        <link rel="stylesheet" href="css/styles_proyects_desktop.css">
+        <link rel="stylesheet" href="css/styles_proyects_mobile.css">
+        <link rel="stylesheet" href="css/styles_proyects_general.css">
     </head>
 
     <body>
